--- a/.github/docker_build.yml
+++ b/.github/docker_build.yml
@@ -7,8 +7,7 @@ name: Container Build + Publish
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
